infra/openshift-config/ingress.yaml
apiVersion: config.openshift.io/v1
kind: Ingress
metadata:
  name: cluster
spec:
  domain: apps.homelab.csfreak.com
